--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,8 @@
     <title>React App</title>
   </head>
   <body>
+    <!--<script src="https://maps.googleapis.com/maps/api/js"></script>-->
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCUnh48REh9oFWmfETeHSlhrdG9aKQrI_M"></script>
     <div id="root"></div>
     <!--
       This HTML file is a template.
