--- a/public/index.html
+++ b/public/index.html
@@ -16,8 +16,8 @@
     <title>React App</title>
   </head>
   <body>
-    <!--<script src="https://maps.googleapis.com/maps/api/js"></script>-->
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCUnh48REh9oFWmfETeHSlhrdG9aKQrI_M"></script>
+    <script src="https://maps.googleapis.com/maps/api/js"></script>
+    <!--<script src="https://maps.googleapis.com/maps/api/jskey=AIzaSyCwU45ylPr_8vXlKtm-rtAN-y2QgCUphYA"></script>-->
     <div id="root"></div>
     <!--
       This HTML file is a template.
