--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCwU45ylPr_8vXlKtm-rtAN-y2QgCUphYA"></script>
     <!--
       Notice the use of %PUBLIC_URL% in the tag above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -16,8 +17,8 @@
     <title>React App</title>
   </head>
   <body>
-    <script src="https://maps.googleapis.com/maps/api/js"></script>
-    <!--<script src="https://maps.googleapis.com/maps/api/jskey=AIzaSyCwU45ylPr_8vXlKtm-rtAN-y2QgCUphYA"></script>-->
+    <!--<script src="https://maps.googleapis.com/maps/api/js"></script>-->
+    
     <div id="root"></div>
     <!--
       This HTML file is a template.
